<resources>
    <string name="app_name">小周接口文档管理</string>
    <string name="cancel_text">取消</string>
    <string name="ok_text">确定</string>
    <string name="no_net_text">网络故障，请检查网络</string>
    <string name="phone_hint_text">请输入手机号</string>
    <string name="pswd_hint_text">请输入密码</string>
    <string name="login_text">登录</string>
    <string name="me_text">我</string>
    <string name="press_angin_exit_text">再按一次退出ZzApiDoc</string>
    <string name="exit_login_text">退出登录</string>
    <string name="msg_notice_text">通知消息</string>
    <string name="msg_clear_text">缓存清理</string>
    <string name="msg_update_text">软件更新</string>
    <string name="msg_about_text">二维码管理</string>
    <string name="msg_setting_text">设置</string>
    <string name="project_text">我的项目</string>
    <string name="register_text">注册</string>
    <string name="more_text">更多</string>
    <string name="submit_text">提交</string>
    <string name="choose_sex_hint">请选择性别</string>
    <string name="sex_text">性别</string>
    <string name="email_hint_text">请输入邮箱</string>
    <string name="email_text">邮箱</string>
    <string name="pswd_text">密码</string>
    <string name="name_text">姓名</string>
    <string name="phone_text">手机号</string>
    <string name="name_hint_text">请输入姓名</string>
    <string name="phone_not_nul_text">手机号不能为空</string>
    <string name="pswd_not_nul_text">密码不能为空</string>
    <string name="msg_pswd_text">修改密码</string>
    <string name="revise_pswd_text">修改密码</string>
    <string name="old_pswd_text">原密码</string>
    <string name="old_pswd_hint_text">请输入原密码</string>
    <string name="new_pswd_text">新密码</string>
    <string name="new_pswd_hint_text">请输入新密码</string>
    <string name="new_pswd_confirm_hint_text">请在输入一次新密码</string>
    <string name="new_pswd_confirm_text">确认密码</string>
    <string name="submiting_text">正在提交...</string>
    <string name="no_data_text">暂无数据</string>
    <string name="add_project_text">新建项目</string>
    <string name="finish_text">完成</string>
    <string name="project_name_text">项目名称</string>
    <string name="project_name_hint_text">请输入项目名称</string>
    <string name="project_property_text">项目属性</string>
    <string name="choose_project_property_hint">请选择项目属性</string>
    <string name="ps_text">备注</string>
    <string name="ps_hint_text">请输入备注</string>
    <string name="my_project">我的项目</string>
    <string name="add_text">添加</string>
    <string name="project_name_not_nul_text">项目名称不能为空</string>
    <string name="interface_group_manage_text">分组管理</string>
    <string name="add_interface_group_text">添加接口分组</string>
    <string name="interface_group_name_text">分组名称</string>
    <string name="interface_group_name_hint_text">请输入分组名称</string>
    <string name="group_name_not_nul_text">分组名称不能为空</string>
    <string name="interface_manage_text">接口管理</string>
    <string name="add_interface_text">添加接口</string>
    <string name="interface_name_text">接口名称</string>
    <string name="interface_name_hint_text">请输入接口中文名称</string>
    <string name="path_text">请求路径</string>
    <string name="path_hint_text">请输入请求路径</string>
    <string name="request_method_text">请求方式</string>
    <string name="choose_request_method_hint">请选择请求方式</string>
    <string name="loading_text">加载中...</string>
    <string name="interface_name_not_nul_text">接口名称不能为空</string>
    <string name="path_not_nul_text">请求路径不能为空</string>
    <string name="request_params_manage_text">请求参数管理</string>
    <string name="response_params_manage_text">返回参数管理</string>
    <string name="add_response_params_text">添加返回参数</string>
    <string name="arg_type_text">参数类型</string>
    <string name="choose_arg_type_hint">请选择参数类型</string>
    <string name="arg_name_text">参数名称</string>
    <string name="arg_name_hint_text">请输入参数名称</string>
    <string name="arg_note_text">参数说明</string>
    <string name="arg_note_hint_text">参数说明</string>
    <string name="ip_text">IP地址</string>
    <string name="ip_hint_text">请输入服务器IP地址</string>
    <string name="add_request_params_text">添加请求参数</string>
    <string name="checking_text">检查中...</string>
    <string name="interface_test_text">接口测试</string>
    <string name="start_test_text">开始测试</string>
    <string name="vaule_hint_text">请输入参数值</string>
    <string name="test_result_text">测试结果</string>
    <string name="copy_result_text">复制结果</string>
    <string name="require_text">是否必填</string>
    <string name="choose_require_hint">请选择是否必填</string>
    <string name="request_header_manage_text">请求头管理</string>
    <string name="add_request_header_text">添加请求头</string>
    <string name="header_name_text">头名称</string>
    <string name="header_value_text">默认值</string>
    <string name="header_value_hint_text">请输入请求头默认值</string>
    <string name="header_name_hint_text">请输入请求头名称</string>
    <string name="header_name_not_nul_text">请求头名称不能为空</string>
    <string name="header_value_not_nul_text">请求头值不能为空</string>
    <string name="note_text">说明</string>
    <string name="note_hint_text">请输入说明</string>
    <string name="server_setting_text">服务器配置</string>
    <string name="save_text">保存</string>
    <string name="ip_not_nul_text">IP地址不能为空</string>
    <string name="import_json_text">JSON导入</string>
    <string name="import_project_text">项目导入</string>
    <string name="import_text">开始导入</string>
    <string name="interface_details_text">接口详情</string>
    <string name="copy_example_text">复制示例</string>
    <string name="search_text">搜索</string>
    <string name="msg_version_text">新版本发布</string>
    <string name="version_publish_text">版本发布</string>
    <string name="release_date_text">发布时间</string>
    <string name="choose_release_date_hint">请选择发布时间</string>
    <string name="update_info_text">更新内容</string>
    <string name="update_info_hint_text">请输入更新内容</string>
    <string name="version_code_text">版本号</string>
    <string name="version_code_hint_text">请输入版本号</string>
    <string name="version_name_text">版本名称</string>
    <string name="version_name_hint_text">请输入版本名称</string>
    <string name="clear_ok">清理成功！</string>
    <string name="arg_def_value_text">默认值</string>
    <string name="arg_def_value_hint_text">请输入默认值</string>
    <string name="generating_text">生成中...</string>
    <string name="my_app">我的应用</string>
    <string name="add_app_text">新建应用</string>
    <string name="app_name_text">应用名称</string>
    <string name="app_name_hint_text">请输入应用名称</string>
    <string name="vercion_code_text">版本号</string>
    <string name="vercion_code_hint_text">请输入版本号</string>
    <string name="vercion_name_text">版本名称</string>
    <string name="vercion_name_hint_text">请输入版本名称</string>
    <string name="min_sdk_text">minSDK</string>
    <string name="min_sdk_hint_text">请输入minSDK</string>
    <string name="target_sdk_text">targetSDK</string>
    <string name="target_sdk_hint_text">请输入targetSDK</string>
    <string name="compile_sdk_text">compileSDK</string>
    <string name="compile_sdk_hint_text">请输入compileSDK</string>
    <string name="main_color_text">主题色</string>
    <string name="main_color_hint_text">请输入主题色(如\'ffffff\')</string>
    <string name="multidex_text">分包</string>
    <string name="choose_multidex_hint">是否分包</string>
    <string name="minify_text">混淆</string>
    <string name="choose_minify_hint">是否混淆代码</string>
    <string name="api_text">接口</string>
    <string name="choose_api_hint">请选择关联接口</string>
    <string name="choose_api_text">接口文档选择</string>
    <string name="versioncode_not_nul_text">版本号不能为空</string>
    <string name="versionname_not_nul_text">版本名称不能为空</string>
    <string name="package_name_text">包名</string>
    <string name="package_name_hint_text">应用包名(如:com.example.myapplication)</string>
    <string name="package_name_not_nul_text">应用包名不能为空</string>
    <string name="app_logo_text">应用图标</string>
    <string name="crop_error">裁剪出错了</string>
    <string name="minsdk_not_nul_text">minSDK不能为空</string>
    <string name="targetsdk_not_nul_text">targetSDK不能为空</string>
    <string name="compilesdk_not_nul_text">compileSDK不能为空</string>
    <string name="app_name_not_nul_text">应用名称不能为空</string>
    <string name="activity_manage_text">Activity管理</string>
    <string name="fragment_manage_text">Fragment管理</string>
    <string name="add_activity_text">新建Activity</string>
    <string name="act_name_text">名称</string>
    <string name="act_name_hint_text">请输入Activity的名称</string>
    <string name="act_title_text">标题</string>
    <string name="act_title_hint_text">请输入Activity的标题</string>
    <string name="act_type_text">类型</string>
    <string name="choose_act_type_hint">请选择Activity的类型</string>
    <string name="show_title_text">是否显示标题</string>
    <string name="choose_show_title_hint">是否显示标题</string>
    <string name="act_splash_text">启动图片</string>
    <string name="splash_duration_text">启动时间(秒)</string>
    <string name="splash_duration_hint_text">请输入欢迎界面停留时间</string>
    <string name="target_act_text">跳转页面</string>
    <string name="target_act_hint_text">请选择跳转的Activity</string>
    <string name="choose_target_act_hint">请选择跳转的Activity</string>
    <string name="widget_manage_text">控件管理</string>
    <string name="widget_type_text">控件类型</string>
    <string name="choose_widget_type_hint">请选择控件类型</string>
    <string name="add_widget_text">新增控件</string>
    <string name="widget_name_text">控件名称</string>
    <string name="widget_name_hint_text">请输入控件名称</string>
    <string name="title_text">标题</string>
    <string name="title_hint_text">请输入标题</string>
    <string name="left_title_text">左边文字</string>
    <string name="left_title_hint_text">请输入左边文字</string>
    <string name="right_text_text">右边文字</string>
    <string name="right_text_hint_text">请输入右边文字</string>
    <string name="right_img_text">右边图片</string>
    <string name="choose_right_img_hint">右边图片</string>
    <string name="show_left_img_text">是否显示左图</string>
    <string name="choose_show_left_img_hint">请选择是否显示左边图片</string>
    <string name="show_right_img_text">是否显示右图</string>
    <string name="choose_show_right_img_hint">请选择是否显示右边图片</string>
    <string name="show_left_text_text">是否显示左文</string>
    <string name="choose_show_left_text_hint">请选择是否显示左边文字</string>
    <string name="show_right_text_text">是否显示右文</string>
    <string name="choose_show_right_text_hint">请选择是否显示右文</string>
    <string name="show_right_layout_text">是否显示右容器</string>
    <string name="choose_show_right_layout_hint">请选择是否显示右边容器</string>
    <string name="left_layout_text">是否显示左容器</string>
    <string name="choose_left_layout_hint">请选择是否显示左边容器</string>
    <string name="hint_text">提示信息</string>
    <string name="hint_hint_text">请输入提示信息</string>
    <string name="def_value_text">默认值</string>
    <string name="def_value_hint_text">请输入默认值</string>
    <string name="key_word_text">资源ID名</string>
    <string name="target_api_text">目标API接口</string>
    <string name="choose_target_api_hint">请选择点击按钮调用的接口</string>
    <string name="background_text">背景</string>
    <string name="choose_background_hint">请选择背景</string>
    <string name="widget_width_text">宽</string>
    <string name="widget_width_hint_text">请输入控件宽</string>
    <string name="widget_height_text">高</string>
    <string name="widget_height_hint_text">请输入控件高</string>
    <string name="widget_weight_text">Weight</string>
    <string name="choose_widget_weight_hint">请输入Weight</string>
    <string name="left_margin_text">左边距</string>
    <string name="left_margin_hint_text">请输入左边距</string>
    <string name="right_margin_text">右边距</string>
    <string name="add_fragment_text">添加Fragment</string>
    <string name="fgm_name_hint_text">请生成Fragment的名字</string>
    <string name="fgm_title_hint_text">请输入Fragment的标题</string>
    <string name="fgm_position_text">序号</string>
    <string name="fgm_position_hint_text">请输入序号</string>
    <string name="version_text">版本号</string>
    <string name="version_hint_text">请输入接口版本号</string>
    <string name="mid_value_text">中值</string>
    <string name="mid_value_hint_text">请输入中值</string>
    <string name="preffix_text">前缀</string>
    <string name="preffix_hint_text">请输入前缀</string>
</resources>