<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayBg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_height"
        android:background="@color/colorMain">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/add_interface_text"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/activity_title_text_size" />

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="160px"
            android:layout_height="match_parent"
            android:background="@drawable/btn_main_selector"
            android:clickable="true">

            <ImageView
                android:layout_width="80px"
                android:layout_height="80px"
                android:layout_centerInParent="true"
                android:src="@drawable/back" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_right"
            android:layout_width="200px"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_main_selector"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/msg_setting_text"
                android:textColor="@color/colorWhite"
                android:textSize="40px" />
        </RelativeLayout>
    </RelativeLayout>

    <!--签订日期-->

    <LinearLayout
        android:id="@+id/ll_request_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_item_bg_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:minHeight="130px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="220px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:gravity="center|left"
            android:text="@string/request_method_text"
            android:textColor="#415868"
            android:textSize="40px" />

        <TextView
            android:id="@+id/tv_request_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/choose_request_method_hint"
            android:textColor="@color/colorBlack"
            android:textSize="40px" />

        <ImageView
            android:layout_width="40px"
            android:layout_height="40px"
            android:layout_marginRight="30px"
            android:src="@drawable/more" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="30px"
        android:background="@color/colorGrayBg" />
    <!--备注-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:minHeight="130px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="220px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:gravity="center|left"
            android:text="@string/interface_name_text"
            android:textColor="#415868"
            android:textSize="40px" />

        <EditText
            android:id="@+id/et_interface_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/interface_name_hint_text"
            android:textColor="@color/colorBlack"
            android:textSize="40px" />

        <ImageView
            android:id="@+id/iv_clear_interface_name"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_marginRight="30px"
            android:src="@drawable/clear"
            android:visibility="gone" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="30px"
        android:background="@color/colorGrayBg" />
    <!--备注-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:minHeight="130px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="220px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:gravity="center|left"
            android:text="@string/version_text"
            android:textColor="#415868"
            android:textSize="40px" />

        <EditText
            android:id="@+id/et_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/version_hint_text"
            android:text="1"
            android:textColor="@color/colorBlack"
            android:textSize="40px" />

        <ImageView
            android:id="@+id/iv_clear_version"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_marginRight="30px"
            android:src="@drawable/clear"
            android:visibility="gone" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="30px"
        android:background="@color/colorGrayBg" />


    <!--备注-->
    <LinearLayout
        android:id="@+id/ll_preffix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:minHeight="130px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="220px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:gravity="center|left"
            android:text="@string/preffix_text"
            android:textColor="#415868"
            android:textSize="40px" />

        <EditText
            android:id="@+id/et_preffix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/preffix_hint_text"
            android:textColor="@color/colorBlack"
            android:textSize="40px" />

        <ImageView
            android:id="@+id/iv_clear_preffix"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_marginRight="30px"
            android:src="@drawable/clear"
            android:visibility="gone" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="30px"
        android:background="@color/colorGrayBg" />


    <!--备注-->
    <LinearLayout
        android:id="@+id/ll_mid_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:minHeight="130px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="220px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:gravity="center|left"
            android:text="@string/mid_value_text"
            android:textColor="#415868"
            android:textSize="40px" />

        <EditText
            android:id="@+id/et_mid_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/mid_value_hint_text"
            android:textColor="@color/colorBlack"
            android:textSize="40px" />

        <ImageView
            android:id="@+id/iv_clear_mid_value"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_marginRight="30px"
            android:src="@drawable/clear"
            android:visibility="gone" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="30px"
        android:background="@color/colorGrayBg" />


    <!--备注-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:minHeight="130px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="220px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:gravity="center|left"
            android:text="@string/path_text"
            android:textColor="#415868"
            android:textSize="40px" />

        <EditText
            android:id="@+id/et_path"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/path_hint_text"
            android:textColor="@color/colorBlack"
            android:textSize="36px" />

        <ImageView
            android:id="@+id/iv_clear_path"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_marginRight="30px"
            android:src="@drawable/clear"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_key_word"
            android:layout_width="100px"
            android:layout_height="60px"
            android:layout_marginRight="30px"
            android:background="@drawable/btn_save_selector"
            android:text="生成"
            android:textColor="@color/colorWhite"
            android:textSize="30px" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="30px"
        android:background="@color/colorGrayBg" />

    <!--备注-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:minHeight="130px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="220px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:gravity="center|left"
            android:text="@string/ps_text"
            android:textColor="#415868"
            android:textSize="40px" />

        <EditText
            android:id="@+id/et_ps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/ps_hint_text"
            android:textColor="@color/colorBlack"
            android:textSize="40px" />

        <ImageView
            android:id="@+id/iv_clear_ps"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_marginRight="30px"
            android:src="@drawable/clear"
            android:visibility="gone" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="30px"
        android:background="@color/colorGrayBg" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:layout_marginBottom="40px"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:layout_marginTop="40px"
        android:background="@drawable/btn_save_selector"
        android:gravity="center"
        android:text="@string/submit_text"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/activity_title_text_size" />
</LinearLayout>